Made the sliders animate the angular way chpt 44

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
       "browser": true,
       "node": true,
       "console": false,
-      "alert": false
+      "alert": false,
+      "blocJams": true
     },
    "rules": {
       "quotes": [2, "single", "avoid-escape"],
