--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "cc-jukebox",
   "version": "0.1.1",
   "main": "public/app.js",
-  "dependencies": {},
+  "dependencies": {
+    "angular-touch": "~1.2.24"
+  },
   "overrides": {},
   "devDependencies": {
     "angular": "1.2.15",
@@ -10,5 +12,8 @@
     "jquery": "~2.1.1",
     "angular-ui-router": "~0.2.10",
     "buzz": "~1.1.0"
+  },
+  "resolutions": {
+    "angular": "1.2.15"
   }
 }
